# deprecated

./: Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac  doxygen.am  doxygen.cfg  main.py  makefile
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
debug/: test.in
dlx2/: dpa.dfa  dpa.dlx2  dpa_tn.h
doc/: cfile  usage
src/: Array.c  Array.h  BSTNode.c  BSTNode.h  BSTNode.i  Basic.i  BasicType.i  BitSet.c  BitSet.h  Container.i  DoublyQueue.i  Exception.c  Exception.h  Info.h  LinkedList.c  LinkedList.h  List.c  List.h  List.i  ListNode.c  ListNode.h  Makefile.am  Makefile.in  Map.c  Map.h  Node.i  Object.c  Object.h  Pair.c  Pair.h  PairType.i  Queue.c  Queue.h  Value.c  Value.h  Vector.c  Vector.h  argv.c  argv.h  automata.c  (+70 more)
src/lib/: Any2Tokens.h  Comm.h  DFA.c  DFA.h  Dlex.c  Dlex.h  File2Tokens.c  Lexer.c  Lexer.h  Makefile.am  Makefile.in  Parser.c  Parser.h  SymbolTable.c  SymbolTable.h  Token.c  Token.h  Tree.c  Tree.h
src/test/: Makefile.am  Makefile.in  main.c
src/v2/: AddressArray.c  AddressArray.h  AddressSet.c  AddressSet.h  Array.c  Array.h  Array.hpp  Basic.c  Basic.h  Bytes.c  Bytes.h  Comm.c  Comm.h  Error.h  IntArray.c  IntArray.h  IntSet.c  IntSet.h  MArray.c  MArray.h  MPair.c  MPair.h  MSet.c  MSet.h  Makefile.am  Makefile.in  Map.c  Map.h  Pair.c  Pair.h  Set.c  Set.h  Set.hpp  StringArray.c  StringArray.h  StringSet.c  StringSet.h  Type.h  Wrapper.c  Wrapper.h  (+1 more)
src/v2/test/: Makefile.am  Makefile.in  main.c
test/: .test.dfa  input.txt  main  main.c  makefile  output.txt  test.dlex  test.dlx2  test.h  test.txt
test/grammar_example/: test.dlx2
tex/: main.tex
