AC_INIT([dlex], [2.2], [xellosgeteternal@gmail.com])
AC_CONFIG_AUX_DIR([build-aux])

AM_INIT_AUTOMAKE([foreign -Wall -Werror])

AC_PROG_CC_C99
AM_PROG_AR
AC_PROG_RANLIB

AC_CHECK_LIB([dac], [ListNew])

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile src/Makefile src/lib/Makefile])

AC_OUTPUT
