SUBDIRS = v2 . test
lib_LTLIBRARIES = libdac.la
libdac_la_SOURCES = Array.c \
									 Array.h \
									 BitSet.c \
									 BitSet.h \
									 dac.c \
									 dac.h \
									 Exception.c \
									 Exception.h \
									 List.c \
									 List.h \
									 Map.c \
									 Map.h \
									 Pair.c \
									 Pair.h

libdac_la_LIBADD = v2/libdac2.la

include_dacdir = $(includedir)/dac
include_dac_HEADERS = Array.h \
											BitSet.h \
											dac.h \
											Exception.h \
											List.h \
											Map.h \
											Pair.h
