lib_LIBRARIES = libdlex.a
libdlex_a_SOURCES = Any2Tokens.h \
										Comm.h \
										DFA.c \
										DFA.h \
										Dlex.c \
										Dlex.h \
										File2Tokens.c \
										Lexer.c \
										Lexer.h \
										Parser.c \
										Parser.h \
										SymbolTable.c \
										SymbolTable.h \
										Token.c \
										Token.h \
										Tree.c \
										Tree.h
include_dlexdir = $(includedir)/dlex
include_dlex_HEADERS = Any2Tokens.h \
											 Comm.h \
											 DFA.h \
											 Dlex.h \
											 Lexer.h \
											 Parser.h \
											 SymbolTable.h \
											 Token.h \
											 Tree.h
